# geoengine

./: .gitignore  Cargo.toml  README.md  YAML_CONFIG.md  build.rs
.github/scripts/: validate-release-main.sh
.github/workflows/: notify-docs.yml  release.yml  update-homebrew-tap.yml
docs/: CONTRIBUTING.md  YAML_CONFIG.md
examples/: geoengine.yaml
examples/converter/: Dockerfile  converter-parser.py  geoengine.yaml  main.py  requirements.txt
examples/ndvi-calculator/: .dockerignore  Dockerfile  geoengine.yaml  main.R  pixi.toml
examples/synthetic-hotspot-analysis/: .dockerignore  Dockerfile  generate_sample_data.py  geoengine.yaml  hotspot_analysis.py  pixi.toml
examples/test-convert-cog/: .dockerignore  Dockerfile  geoengine.yaml  main.py  pixi.toml
install/: geoengine.rb  install.ps1  install.sh
plugins/arcgis-ge/: GeoEngineTools.pyt  geoengine_client.py
plugins/qgis/: metadata.txt
plugins/qgis-ge/: __init__.py  geoengine_plugin.py  geoengine_provider.py  geoengine_widgets.py  metadata.txt  test_geoengine_provider.py
skills/make-geoengine-worker/: SKILL.md
skills/use-geoengine/: SKILL.md
skills/write-argparse/: SKILL.md
skills/write-geoengine-yaml/: SKILL.md
skills/write-pixi-toml/: SKILL.md
src/: main.rs
src/cli/: deploy.rs  image.rs  mod.rs  patch.rs  plugins.rs  project.rs  run.rs  service.rs  settings.rs  update.rs  worker.rs
src/config/: mod.rs  pixi.rs  project.rs  settings.rs  state.rs  worker.rs  yaml_store.rs
src/docker/: client.rs  container.rs  dockerfile.rs  gpu.rs  mod.rs
src/proxy/: jobs.rs  routes.rs
src/utils/: geoengine.rs  logger.rs  mod.rs  paths.rs  versioning.rs
