[package]
name = "geoengine"
version = "0.2.0"
edition = "2021"
authors = ["GeoEngine Team"]
description = "Docker-based isolated runtime manager for geospatial workloads with ArcGIS Pro and QGIS integration"
license = "MIT"
repository = "https://github.com/NikaGeospatial/geoengine"
keywords = ["docker", "geospatial", "gis", "arcgis", "qgis"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "geoengine"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4", features = ["derive", "env", "wrap_help"] }

# Docker API
bollard = "0.16"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utilities
dirs = "5"
which = "6"
indicatif = "0.17"
colored = "2"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
dialoguer = "0.12.0"
sha2 = "0.10"
regex = "1.12.3"
semver = "1.0.27"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
